add: transfer management
